--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.26",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "motion": "^12.23.26",
     "next": "16.0.7",
     "next-themes": "latest",
+    "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
